--- a/analysis.html
+++ b/analysis.html
@@ -84,7 +84,7 @@
     <!-- Page Content -->
     <div class="container">
 
-        <iframe src="https://cdn.rawgit.com/dyurovsky/noisy-kids/master/noisy_kids_analysis.html" 
+        <iframe src="https://rawgit.com/dyurovsky/noisy-kids/master/noisy_kids_analysis.html" 
                 style="border: 0; position:fixed; top:70px; left:0; right:0; bottom:0; width:100%; height:100%"></iframe>
         </div>
         <!-- /.row -->
