revision draft finished

--- a/noisy_kids_analysis.html
+++ b/noisy_kids_analysis.html
@@ -101,6 +101,7 @@ h6 {
 }
 </style>
 
+<link href="data:text/css;charset=utf-8,%0Abody%7B%0Afont%2Dsize%3A%2012pt%3B%0A%7D" rel="stylesheet" type="text/css" />
 
 </head>
 
