forgot to add journal in paper link

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                      </ul>
                    </li>
                     <li>
-                        <a href="http://callab.uchicago.edu/papers/ycf-inpress.pdf">Paper</a>
+                        <a href="http://callab.uchicago.edu/papers/ycf-psci-inpress.pdf">Paper</a>
                     </li>
                     <li>
                         <a href="https://github.com/dyurovsky/noisy-kids">GitHub</a>
