--- a/experiments/exp3/noisy_implausible.html
+++ b/experiments/exp3/noisy_implausible.html
@@ -45,7 +45,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Noisy-Kids</a>
+                <a class="navbar-brand" href="../../index.html">Noisy-Kids</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
