--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-8 col-sm-8 col-lg-offset-2">
                 <h3 align="center">Preschoolers flexibly adapt to linguistic input in a noisy channel</h3>
-                <h4 align="center">in press at <i> Psychological Science </i> </h4>
+                <h4 align="center"><i>Psychological Science</i>, 2017</h4>
                 <h4 align="center">Daniel Yurovsky, Sarah Case, and Michael C. Frank</h4>
                 <p>Because linguistic communication is inherently noisy and uncertain, adult language comprehenders integrate bottom-up cues from speech perception with top-down expectations about what speakers are likely to say. Further, in line with the predictions of ideal observer models, comprehenders flexibly adapt how much they rely on these two kinds of cues in proportion to their changing reliability. Do children also show evidence of flexible, expectation-based language comprehension? We presented preschoolers with ambiguous utterances that afforded two different interpretations, depending on whether they privileged perceptual input or top-down expectations. Across three experiments, we manipulated the reliability of both their perceptual input and their expectations about the speaker’s intended meaning. As predicted by noisy channel models of speech processing, 4- and 5-year-old—but perhaps not younger—children flexibly adjusted their interpretations as cues changed in reliability.<p>
             </div>
